# Herbal

./: README.md  app.py  health_hub.db  main.py  pyproject.toml
src/core/: mindsdb.py  queries.py
static/styles/: style.css
templates/: add.html  agent_status.html  base.html  browse.html  create_job.html  evaluate_kb.html  index.html  search.html
